--- a/topobank_statistics/templates/topobank_statistics/roughnessparameters_card_detail.html
+++ b/topobank_statistics/templates/topobank_statistics/roughnessparameters_card_detail.html
@@ -58,8 +58,8 @@
                 {% fa5_icon 'download' %} Download XLSX</a>
             {% endif %}
             {% if not analyses_unready %}
-              <a class="btn btn-default btn-block btn-lg" href="#" data-toggle="modal"
-                 data-target="#statusesModal-{{ card_id }}">{% fa5_icon 'tasks' %} Task information</a>
+              <a class="btn btn-primary btn-block btn-lg" href="#" data-toggle="modal"
+                 data-target="#statusesModal-{{ card_id }}">{% fa5_icon 'tasks' %} Tasks</a>
             {% endif %}
           {% endif %}
         </div>
